server/compilers/goLiteJS/src/test/ml1/valid/top5.go
// top level declaration permutations
package main

var x int

func f(){}

type num int
