server/compilers/goLiteJS/src/test/ml1/invalid/package5.go
// function declaration before package declaration

func f() {
    return
}

package main
